tooling/tree-sitter-satsuma/grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.import_decl,
        $.note_block,
        $.namespace_block,
        $.schema_block,
        $.fragment_block,
        $.transform_block,
        $.mapping_block,
      ),

    // ── Namespace block ──────────────────────────────────────────────────
    // Flat (non-nestable) namespace: namespace <name> (<metadata>)? { <defs> }

    schema_block: ($) =>
      seq("schema", $.block_label, optional($.metadata_block), "{", optional($.schema_body), "}"),

    // ── Fragment block ────────────────────────────────────────────────────
    // Metadata is accepted on every definition block (spec 2.1 describes
    // metadata generically); fragment/transform parity with schema/mapping.

    fragment_block: ($) =>
      seq("fragment", $.block_label, optional($.metadata_block), "{", optional($.schema_body), "}"),

    // ── Transform block ───────────────────────────────────────────────────

    mapping_block: ($) =>
      seq(
        "mapping",
        optional($.block_label),
        optional($.metadata_block),
        "{",
        // Optional so `mapping m { }` parses like empty schema/transform
        // bodies do — an empty mapping is a valid skeleton while authoring.
        optional($.mapping_body),
        "}",
      ),

    mapping_body: ($) => repeat1($._mapping_body_item),

    _mapping_body_item: ($) =>
      choice(
        $.note_block,
        $.source_block,
        $.target_block,
        $.each_block,
        $.flatten_block,
        $._arrow_decl,
      ),

    // source { ref1, ref2 } or source { ref1 ref2 } or source { "join ..." }
    source_block: ($) => seq("source", "{", repeat1(seq($._source_entry, optional(","))), "}"),

    _source_entry: ($) => $.source_ref,

    source_ref: ($) =>
      seq(
        choice($.qualified_name, $.backtick_name, $.identifier, $.nl_string),
        optional($.metadata_block),
      ),

    // target { ref } — single entry; trailing comma allowed for consistency
    // with source blocks (see "Comma policy" in the spec, sl-0nvt).
    target_block: ($) => seq("target", "{", $._source_entry, optional(","), "}"),

    // ── each/flatten blocks ─────────────────────────────────────────────
    // each src_path -> tgt_path (metadata)? { nested_block_item* }
    // flatten src_path -> tgt_path (metadata)? { nested_block_item* }
    //
    // The body allows nested each/flatten per spec section 4.4. Source/target
    // blocks and note blocks are mapping-level constructs and are not permitted
    // inside nested blocks.

    each_block: ($) =>
      seq(
        "each",
        $.src_path,
        "->",
        $.tgt_path,
        optional($.metadata_block),
        "{",
        repeat($._nested_block_item),
        "}",
      ),

    flatten_block: ($) =>
      seq(
        "flatten",
        $.src_path,
        "->",
        $.tgt_path,
        optional($.metadata_block),
        "{",
        repeat($._nested_block_item),
        "}",
      ),

    // Shared body item for each/flatten blocks: arrow declarations plus nested
    // each/flatten sub-blocks. Does not include source/target/note, which are
    // mapping-level constructs.
    _nested_block_item: ($) => choice($._arrow_decl, $.each_block, $.flatten_block),

    // ── Note block ────────────────────────────────────────────────────────

    schema_body: ($) => repeat1($._schema_body_item),

    _schema_body_item: ($) => choice($.field_decl, $.fragment_spread, $.note_block),

    // ── Field declaration (unified syntax) ──────────────────────────────
    // All fields follow: NAME [TYPE] [(metadata)] [{schema_body}]
    //
    // TYPE can be:
    //   - a scalar type: STRING, DECIMAL(12,2), etc. (type_expr token)
    //   - record: single nested structure
    //   - list_of record: list of structured elements
    //   - list_of TYPE: scalar list (list_of STRING, list_of INT, etc.)

    field_decl: ($) =>
      choice(
        // NAME record (metadata)? { schema_body }
        $._record_field,
        // NAME list_of record (metadata)? { schema_body }
        $._list_of_record_field,
        // NAME list_of TYPE (metadata)?
        $._list_of_scalar_field,
        // NAME TYPE (metadata)?  — original scalar field
        $._scalar_field,
        // NAME (metadata)  — typeless field (type omitted, metadata required to disambiguate)
        $._typeless_field,
      ),

    _scalar_field: ($) =>
      seq(
        $.field_name,
        // The type must sit on the same line as the field name (sl-hjx1);
        // inline_type is the external, line-aware spelling of type_expr.
        alias($.inline_type, $.type_expr),
        optional($.metadata_block),
      ),

    _typeless_field: ($) => seq($.field_name, $.metadata_block),

    _record_field: ($) =>
      seq($.field_name, "record", optional($.metadata_block), "{", optional($.schema_body), "}"),

    _list_of_record_field: ($) =>
      seq(
        $.field_name,
        "list_of",
        "record",
        optional($.metadata_block),
        "{",
        optional($.schema_body),
        "}",
      ),

    _list_of_scalar_field: ($) =>
      seq($.field_name, "list_of", alias($.inline_type, $.type_expr), optional($.metadata_block)),

    field_name: ($) => choice($.identifier, $.backtick_name),

    // type_expr is produced by the external scanner (INLINE_TYPE, aliased at
    // the use sites above): an identifier-shaped word — hyphens allowed
    // inside, not at the end (sl-csd2) — plus optional immediately-attached
    // parenthesized arguments, restricted to the same line as the field name
    // (sl-hjx1). See src/scanner.c.

    // ── Fragment spread ───────────────────────────────────────────────────

    fragment_spread: ($) => seq("...", $.spread_label),

    // Multi-word spreads: ...audit fields, ...to utc date
    // Qualified spreads: ...ns::fragment_name
    // The spread consumes as many identifiers as appear on the SAME LINE.
    // continuation_word is an external token that only matches when no newline
    // appears between the previous token and the candidate identifier, so
    // `...f\nextra x` correctly parses as spread "f" + field "extra x".
    spread_label: ($) => choice($.qualified_name, $.backtick_name, $._spread_words),

    _spread_words: ($) => seq($.identifier, repeat($.continuation_word)),

    // ── Arrow declarations ────────────────────────────────────────────────
    // Three arrow types share src_path -> tgt_path prefix.
    // computed_arrow omits src_path (starts directly with ->).
    // nested_arrow body contains arrow_decls; map_arrow body contains pipe_chain.

    _arrow_decl: ($) => choice($.computed_arrow, $.nested_arrow, $.map_arrow),

    // -> tgt_path (metadata)? { pipe_chain }?
    computed_arrow: ($) =>
      seq("->", $.tgt_path, optional($.metadata_block), optional($._arrow_transform_body)),

    // src_path -> tgt_path (metadata)? { arrow_decl* }
    nested_arrow: ($) =>
      seq(
        $.src_path,
        "->",
        $.tgt_path,
        optional($.metadata_block),
        "{",
        repeat($._arrow_decl),
        "}",
      ),

    // src_path(, src_path)* -> tgt_path (metadata)? { pipe_chain }?
    map_arrow: ($) =>
      seq(
        commaSep1($.src_path),
        "->",
        $.tgt_path,
        optional($.metadata_block),
        optional($._arrow_transform_body),
      ),

    // { pipe_chain } transform body on an arrow
    _arrow_transform_body: ($) => seq("{", $.pipe_chain, "}"),

    // ── Arrow paths ───────────────────────────────────────────────────────
    // src_path and tgt_path are named wrapper nodes.
    // [] is removed from all paths — iteration is expressed via each/flatten.

    src_path: ($) => $._path_expr,
    tgt_path: ($) => $._path_expr,

    _path_expr: ($) =>
      choice(
        $.namespaced_path,
        $.backtick_path,
        $.parent_path,
        $.root_path,
        $.relative_field_path,
        $.field_path,
      ),

    // A path is one lexical unit: no whitespace or comment may follow a `.`,
    // `^.` or `$.` marker or sit between segments (bsw-0twy, spec §4.4).
    // Every segment after a marker or a continuation dot is therefore an
    // immediate token (`_imm_path_seg`). Without this, `^. oid` and `a. b`
    // parsed, extraction read the raw text with the space in it, and fmt
    // silently rewrote the path to a different, canonical meaning. The
    // continuation dot is itself immediate, so multi-line bare arrows are
    // never merged into one path. The segment after `::` is deliberately
    // left non-immediate — `ns:: x` is a separate question.

    // ns::identifier or ns::identifier.field...
    namespaced_path: ($) =>
      prec.right(seq($.identifier, "::", $._path_seg, repeat($._path_continuation))),

    // `BacktickRef` or `BacktickRef`.field...
    backtick_path: ($) => prec.right(seq($.backtick_name, repeat($._path_continuation))),

    // .field or .field.nested...
    relative_field_path: ($) => prec.right(seq(".", $._imm_path_seg, repeat($._path_continuation))),

    // ^.^...field — each `^.` pops one enclosing container level (ADR-053).
    // The marker is a single token so a stray `^` is never half-parsed. Every
    // marker after the first is immediate, so `^. ^.sid` is rejected rather
    // than read as two levels with a gap. A bare `^.` with no following
    // segment is a parse error — the field is not optional.
    field_path: ($) => prec.right(seq($.identifier, repeat($._path_continuation))),

    // `.segment` glued to the segment before it.
    _path_continuation: ($) => seq(token.immediate("."), $._imm_path_seg),

    _path_seg: ($) => choice($.identifier, $.backtick_name),

    // A path segment with nothing between it and the preceding marker. The
    // aliases keep the CST node names (`identifier`, `backtick_name`) that
    // every consumer reads, so the rule changes only what is accepted.
    _imm_path_seg: ($) =>
      choice(
        alias(token.immediate(IDENTIFIER_PATTERN), $.identifier),
        alias(token.immediate(BACKTICK_NAME_PATTERN), $.backtick_name),
      ),

    // ── Pipe chain (transform, arrow bodies) ─────────────────────────────

    pipe_chain: ($) => seq($.pipe_step, repeat(seq("|", $.pipe_step))),

    pipe_step: ($) => choice($.fragment_spread, $.map_literal, $.pipe_text),

    // pipe_text: greedy repeat of NL-compatible tokens.
    //
    // Every sequence of tokens between pipe delimiters (or between { and } / |)
    // is a single NL step. Bare identifiers like `trim`, numbers, quoted
    // strings, dotted names, arithmetic operators, and parenthesised text such
    // as `round(2)` are all treated as plain NL for downstream interpretation.
    // The only structured pipe-step forms are fragment spreads (`...name`) and
    // value maps (`map { ... }`), which are parsed by sibling rules above.
    //
    // | and } naturally terminate it (not in the choice set).
    pipe_text: ($) => repeat1(choice($._pipe_text_atom, $._parenthesized_pipe_text)),

    _pipe_text_atom: ($) =>
      choice(
        $.at_ref,
        $.nl_string,
        $.multiline_string,
        $.backtick_name,
        $.dotted_name,
        $.number_literal,
        $.identifier,
        $._comparison_op,
        $._arithmetic_op,
      ),

    _parenthesized_pipe_text: ($) =>
      seq("(", repeat(choice($._pipe_text_atom, $._parenthesized_pipe_text, ",")), ")"),

    // ── Map literal ───────────────────────────────────────────────────────

    block_label: ($) => choice($.identifier, $.backtick_name),

    // ── Metadata block ────────────────────────────────────────────────────

    // `()` (empty) is allowed; a trailing comma is allowed only after at
    // least one entry, so `(,)` is a parse error rather than silently empty.
    metadata_block: ($) =>
      seq("(", optional(seq(commaSep1($._metadata_entry), optional(","))), ")"),

    _metadata_entry: ($) =>
      choice($.enum_body, $.slice_body, $.note_tag, $.tag_with_value, $.tag_token),

    note_tag: ($) => seq("note", choice($.multiline_string, $.nl_string)),

    // tag_with_value: identifier followed by greedy value tokens
    tag_token: ($) => $.identifier,

    // ── @ref — structural cross-reference ────────────────────────────────
    // @identifier, @schema.field, @ns::schema.field, @`backtick-name`.field
    // Used in pipe_text and value_text for structural references.
    identifier: (_) => IDENTIFIER_PATTERN,

    backtick_name: (_) => BACKTICK_NAME_PATTERN,

    // Content is any run without three consecutive quotes; the optional
    // `"?"?` before the closing delimiter lets content END in one or two
    // quotes (sl-xb85: `"""He said "hi""""`). Content cannot end in three
    // or more quotes — that is indistinguishable from the terminator.
    nl_string: (_) => /"(?:[^"\\]|\\.)*"/,
